fixed menu-height and header z-index

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,6 @@
 .page-header {
   @include position(absolute);
+  z-index: 3;
 }
 
 .header-container {
@@ -55,7 +56,7 @@
   top: 0;
   right: 0;
   width: 250px;
-  height: 100vh;
+  height: 100%;
   background-color: $menu-bg-color;
   box-shadow: 0px 4px 4px rgba(212, 20, 67, 0.25);
 
